Fix alignment issue in cuisine details for improved layout

--- a/cmpe202project/src/styles/RestaurantPage.css
+++ b/cmpe202project/src/styles/RestaurantPage.css
@@ -56,6 +56,7 @@
 
 .restaurant-details .cuisine{
     margin: 10px;
+    transform: translateY(2px);
 }
 
 .restaurant-details .rating-container{
